hphp/hack/test/typecheck/function_default.php.exp
File "function_default.php", line 3, characters 48-49:
A previous parameter has a default value.
Remove all the default values for the preceding parameters,
or add a default value to this one. (Typing[4077])
