hphp/hack/test/typecheck/function_default.php
<?hh

function replicate_bug_def(string $s = "", int $i): void {}
